# tulip

./: README.md
include/tulip/: tulip.hpp
include/tulip/components/: apply.hpp  apply.impl.hpp  get.hpp  get.impl.hpp  integer_sequence.hpp  integer_sequence.impl.hpp  tie.hpp  tie.impl.hpp  tuple.hpp  tuple.impl.hpp  tuple_element.hpp  tuple_element.impl.hpp  tuple_size.hpp  tuple_size.impl.hpp
tests/: CMakeLists.txt  test_get.cpp  test_index_sequence.cpp  test_tuple_apply.cpp  utils.hpp
